--- a/source/_includes/head.html
+++ b/source/_includes/head.html
@@ -4,8 +4,8 @@
 <meta http-equiv="Cache-Control" content="only-if-cached"/>
 <meta http-equiv="Cache-Control" content="max-age=120"/>
 
-<title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
-<meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
+<title>{{ site.title }}</title>
+<meta name="description" content="{{ site.description }}">
 
 <link rel="stylesheet" href="{{ '/css/main.css' | prepend: site.baseurl }}">
 <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
