--- a/source/_includes/head.print.html
+++ b/source/_includes/head.print.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Cache-Control" content="only-if-cached"/>
 <meta http-equiv="Cache-Control" content="max-age=120"/>
 <title>{{ site.messages[lang].page-title }} - {{ site.author.name }}</title>
-<meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
+<meta name="description" content="{{ site.description }}">
 <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ '/feed.xml' | prepend: site.baseurl | prepend: site.url }}" />
 <link rel="shortcut icon" href="{{ '/images/favicon.ico' | prepend: site.baseurl }}" type="image/png">
