--- a/source/_includes/social.html
+++ b/source/_includes/social.html
@@ -7,5 +7,5 @@
   <li><a href="{{ site.author.whatsapp }}" title="Send me an whatsapp" target="_blank"><i class="icon icon-whatsapp"></i></a></li>
   <li><a href="tel:{{ site.author.phone }}" title="Call me" target="_blank"><i class="icon icon-phone"></i></a></li>
   <li><a href="{{ '/tools/' | relative_url }}" title="Tools"><i class="icon icon-wrench"></i></a></li>
-  <!-- <li><a href="{{ '/questions/' | relative_url }}" title="Questions"><i class="icon icon-question"></i></a></li> -->
+  <li><a href="{{ '/tools/questions/' | relative_url }}" title="Questions"><i class="icon icon-question"></i></a></li>
 </ul>
