fix small liquid error on quiz script

--- a/source/_includes/tools/questions/quiz.html
+++ b/source/_includes/tools/questions/quiz.html
@@ -15,7 +15,7 @@
 {% assign questions_json = questions_json | strip_newlines %}
 
 <script>
-  const questions = {{ questions_json }};
+  const questions = JSON.parse('{{ questions_json | escape }}');
 
   let correct = 0;
 
