fix quiz structure to avoid md errors

--- a/source/_includes/tools/questions/quiz.html
+++ b/source/_includes/tools/questions/quiz.html
@@ -1,3 +1,5 @@
+<div id="quiz-container"></div>
+<div id="quiz-result"></div>
 
 {% assign filtered_questions = "" | split: "" %}
 {% for q in include.questions %}
