--- a/source/_includes/head.print.html
+++ b/source/_includes/head.print.html
@@ -3,7 +3,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Cache-Control" content="only-if-cached"/>
 <meta http-equiv="Cache-Control" content="max-age=120"/>
-<title>{{ site.messages[lang].page-title }} - {{ site.author.name }}</title>
+<meta name="robots" content="noindex">
+<title>{{ page.title }}</title>
 <meta name="description" content="{{ site.description }}">
 <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ '/feed.xml' | prepend: site.baseurl | prepend: site.url }}" />
