--- a/source/_includes/print/experiences.html
+++ b/source/_includes/print/experiences.html
@@ -4,32 +4,29 @@
 
 {% assign sorted = site.experiences | sort: 'resignationdate' | reverse %}
 {% assign end2end = sorted | where_exp: "item", "item.company contains 'End2End'" | first %}
-{% comment %} TODO: Fix reject filter - {% assign other_experiences = sorted | reject: "company", "End2End Systems" %} {% endcomment %}
 {% assign other_experiences = sorted %}
-
 {% assign list = "" | split: "" %}
 {% if end2end %}
-  {% assign list = list | push: end2end %}
+{% assign list = list | push: end2end %}
 {% endif %}
 {% assign list = list | concat: other_experiences %}
 
 {% for i in (0..site.max_experiences) %}
-  {% if list[i] %}
-  <div class="page">
-    <strong>
-      <em>
-        {{ list[i][lang].jobtitle }}
-      </em>
-    </strong> &mdash; {{ list[i].company }} &mdash; <time datetime="{{ list[i].admissiondate }}">{{ list[i].admissiondate | date: "%Y" }}</time> &dash;
+{% if list[i] %}
+<article class="experience" itemscope itemtype="https://schema.org/WorkExperience">
+  <h3 itemprop="jobTitle">{{ list[i][lang].jobtitle }}</h3>
+  <p>
+    <span itemprop="hiringOrganization">{{ list[i].company }}</span> -
+    <time itemprop="startDate" datetime="{{ list[i].admissiondate }}">{{ list[i].admissiondate | date: "%Y" }}</time>
     {% if list[i].resignationdate %}
-    <time datetime="{{ list[i].resignationdate }}">{{ list[i].resignationdate | date: "%Y" }}</time>
+    - <time itemprop="endDate" datetime="{{ list[i].resignationdate }}">{{ list[i].resignationdate | date: "%Y"
+      }}</time>
     {% else %}
-    {{ site.messages[lang].print-resume.title.current }}
+    - {{ site.messages[lang].print-resume.title.current }}
     {% endif %}
-    <br />{{ list[i][lang].description }}
-    <!-- <br />{{ list[i].languages | join: ', ' }}
-    <br />{{ list[i].frameworks | join: ', ' }}
-    <p>{{ list[i].additionInfo | join: ', ' }}</p> -->
-  </div>
-  {% endif %}
+  </p>
+  <p itemprop="description">Main responsibilities and achievements:</p>
+  {{ list[i][lang].description }}
+</article>
+{% endif %}
 {% endfor %}
