--- a/source/_layouts/pagesprint.html
+++ b/source/_layouts/pagesprint.html
@@ -2,11 +2,11 @@
 layout: print
 ---
 {% assign lang = page.lang | default: "en-us" %}
-<section class="main-container">
-  <article role="article" class="page card">{% include print/goal.md %}</article>
-  <article role="article" class="page card">{% include print/experiences.html %}</article>
-  <article role="article" class="page card">{% include print/graduation.md %}</article>
-  <article role="article" class="page card">{% include print/languages.html %}</article>
-  <article role="article" class="page card">{% include print/courses.md %}</article>
-  <article role="article" class="page card">{% include print/core-competencies.html %}</article>
+<section class="main-container" aria-label="{{ site.messages[lang].main-container }}">
+  <article role="article" lang="{{ lang }}">{% include print/goal.html %}</article>
+  <article role="article" lang="{{ lang }}">{% include print/experiences.html %}</article>
+  <article role="article" lang="{{ lang }}">{% include print/graduation.html %}</article>
+  <article role="article" lang="{{ lang }}">{% include print/languages.html %}</article>
+  <article role="article" lang="{{ lang }}">{% include print/courses.html %}</article>
+  <article role="article" lang="{{ lang }}">{% include print/core-competencies.html %}</article>
 </section>
