--- a/source/_includes/tools/questions/year-blocks.html
+++ b/source/_includes/tools/questions/year-blocks.html
@@ -2,12 +2,12 @@
   {% for subject in include.subjects %}
     {% assign label = subject | capitalize %}
     {% if subject == "dotnet" %}
-      {% assign label = "NET" %}
+      {% assign label = ".NET" %}
     {% elsif subject == "csharp" %}
       {% assign label = "C#" %}
     {% endif %}
     {% assign is_even = forloop.index0 | modulo: 2 %}
-    <a href="{{ '/tools/questions/' | append: include.year | append: '/' | append: subject | append: '/quiz/' | relative_url }}"
+    <a href="{{ '/tools/questions/' | append: include.year | append: '/' | append: subject |  relative_url }}"
        class="button{% if is_even == 0 %} button-ghost{% endif %}">
       {{ label }}
     </a>
