small fix on head and default

--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -1,7 +1,8 @@
 ---
 ---
+{% assign lang = page.lang | default: "en-us" %}
 <!DOCTYPE html>
-<html lang="en">
+<html lang="{{ lang }}">
 <head>
   {% include head.html %}
 </head>
