update pages to have excerpt

--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -1,8 +1,7 @@
 ---
 ---
-{% assign lang = page.lang | default: "en-us" %}
 <!DOCTYPE html>
-<html lang="{{ lang }}">
+<html lang="en-us">
 <head>
   {% include head.html %}
 </head>
