--- a/source/_includes/head.html
+++ b/source/_includes/head.html
@@ -5,7 +5,12 @@
 <meta http-equiv="Cache-Control" content="max-age=120"/>
 
 <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
-<meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
+{% if page.excerpt != nil and page.excerpt != '' %}
+  {% assign meta_description = page.excerpt | strip_html | strip_newlines | truncate: 160 %}
+{% else %}
+  {% assign meta_description = site.description | strip_html | strip_newlines | truncate: 160 %}
+{% endif %}
+<meta name="description" content="{{ meta_description }}">
 
 <link rel="stylesheet" href="{{ '/css/main.css' | prepend: site.baseurl }}">
 <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
